# med_taxonomizer

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
apps/reviewer/: index.html  package-lock.json  package.json  standalone.html
docs/: applying-to-your-data.md  architecture.md  entrypoints.md  local-reviewer.md  method.md  publication-roadmap.md  quickstart.md
examples/synthetic/: free_text.csv
lib/: config.py  experiment_paths.py  labeling_prompt.py  labeling_schema.py  llm_client.py  model_naming.py  taxonomy_paths.py  taxonomy_tree.py  text_utils.py
scripts/: phase_00_meta_discovery.py  phase_01_meta_consolidation.py  phase_02_category_discovery.py  phase_03_category_consolidation.py  phase_04_labeling.py  phase_05_review_other.py  phase_06_split_audit.py  phase_07_subcategory_discovery.py  phase_08_tree_consolidation.py  phase_09_ambiguity_pruning.py  prepare_texts.py  review_taxonomy.py  review_taxonomy.sh  run_taxonomy_phases_02_03.sh  run_taxonomy_pipeline.sh
scripts/prompts/: phase_00_meta_discovery.md  phase_01_meta_consolidation.md  phase_02_category_discovery.md  phase_03_category_consolidation_cross_meta.md  phase_03_category_consolidation_per_meta.md  phase_04_labeling.md  phase_05_other_category_audit.md  phase_05_other_category_consolidation.md  phase_05_other_relabel.md  phase_06_split_audit.md  phase_07_subcategory_consolidation.md  phase_07_subcategory_discovery.md  (+6 more)
tests/: test_phase09_paths.py  test_run_taxonomy_pipeline_shell.py
website/: index.html
(+6 files in other folders)
