[project]
name = "med-taxonomizer"
version = "0.1.0"
description = "Research toolkit and UI for medical complication taxonomy induction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "pydantic>=2.0", "uvicorn>=0.29", "openai>=2.14.0", "python-dotenv>=1.0", "pandas>=2.3.3", "pyarrow>=22.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
llm = ["openai>=2.14.0", "python-dotenv>=1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "F401", "F541", "F601", "F811"]
